--- a/openshift/storm-monitor.yaml
+++ b/openshift/storm-monitor.yaml
@@ -13,10 +13,6 @@ parameters:
 - name: NAME
   value: "storm-monitor"
   required: true
-- name: REPLICAS
-  description: Number of replicas
-  required: true
-  value: "1"
 - name: VERSION
   value: "1.1.0"
   required: true
@@ -32,32 +28,16 @@ parameters:
   description: Log Directory
   required: true
   value: "/logs"
-- name: NIMBUS_TRHIFT_PORT
-  description: Nimbus thrift port
-  required: true
-  value: '6627'
-- name: NIMBUS_SVC_NAME
-  description: Nimbus service name
-  required: true
-  value: "storm-nimbus"
-- name: LOGVIEWER_PORT
-  description: Nimbus thrift port
-  required: true
-  value: '8000'
 - name: UI_PORT
-  description: Nimbus thrift port
+  description: Webconsole port
   required: true
   value: '8080'
-- name: ZK_SERVERS
-  description: "Zookeeper servers, value format must be: \"zk-server1\", \"zk-server2\" (Note quote marks)"
-  required: true
-  value: "\"zk-server1\", \"zk-server2\""
 - name: NIMBUS_SEEDS
   description: >
     "Nimbus seeds, FQDN values for all seeds in the cluster,
      format must be: \"storm-nimbus-0.storm-nimbus\", \"storm-nimbus-1.storm-nimbus\" (Note quote marks)."
   required: true
-  value: "\"storm-nimbus-0.storm-nimbus.myproject.svc.cluster.local\", \"storm-nimbus-1.storm-nimbus.myproject.svc.cluster.local\""
+  value: "\"storm-nimbus-0.storm-nimbus.myproject.svc.cluster.local\""
 - name: CONFIG_FILE_CONTENS
   description: Add storm.yaml contents
   required: true
@@ -81,16 +61,16 @@ parameters:
     ui.http.creds.plugin: org.apache.storm.security.auth.DefaultHttpCredentialsPlugin
 - name: RESOURCE_MEMORY_REQ
   description: The memory resource request.
-  value: "500Mi"
+  value: "512Mi"
 - name: RESOURCE_MEMORY_LIMIT
   description: The limits for memory resource.
-  value: "1Gi"
+  value: "512Mi"
 - name: RESOURCE_CPU_REQ
   description: The CPU resource request.
-  value: "500m"
+  value: "250m"
 - name: RESOURCE_CPU_LIMIT
   description: The limits for CPU resource.
-  value: "1"
+  value: "500m"
 
 objects:
 
@@ -104,11 +84,7 @@ objects:
     storm.yaml: |
       ${CONFIG_FILE_CONTENS}
       # Generated properties
-      logviewer.port: ${LOGVIEWER_PORT}
       ui.port: ${UI_PORT}
-      storm.zookeeper.servers: [${ZK_SERVERS}]
-      storm.zookeeper.root: "/${NAME}"
-      nimbus.thrift.port: ${NIMBUS_TRHIFT_PORT}
       nimbus.seeds : [${NIMBUS_SEEDS}]
       storm.local.dir: "${DATA_DIR}"
       storm.log.dir: "${LOG_DIR}"
