--- a/openshift/storm-monitor.yaml
+++ b/openshift/storm-monitor.yaml
@@ -37,7 +37,7 @@ parameters:
     "Nimbus seeds, FQDN values for all seeds in the cluster,
      format must be: \"storm-nimbus-0.storm-nimbus\", \"storm-nimbus-1.storm-nimbus\" (Note quote marks)."
   required: true
-  value: "\"storm-nimbus-0.storm-nimbus.myproject.svc.cluster.local\""
+  value: "\"storm-nimbus-0.storm-nimbus.myproject.svc.cluster.local\", \"storm-nimbus-0.storm-nimbus.myproject.svc.cluster.local\""
 - name: CONFIG_FILE_CONTENS
   description: Add storm.yaml contents
   required: true
@@ -103,50 +103,60 @@ objects:
       app: ${NAME}
 
 - apiVersion: v1
-  kind: Pod
+  kind: DeploymentConfig
   metadata:
     name: ${NAME}
     labels:
       app: ${NAME}
   spec:
-    containers:
-    - name: ${NAME}-ui
-      image: storm:${VERSION}
-      command:
-      - /bin/bash
-      - -c
-      args:
-      - storm --config ${CONF_DIR}/storm.yaml ui
-      imagePullPolicy: IfNotPresent
-      terminationMessagePath: /dev/termination-log
-      ports:
-      - containerPort: ${UI_PORT}
-        protocol: "TCP"
-        name: ui
-      readinessProbe:
-        tcpSocket:
-          port: ui
-        initialDelaySeconds: 20
-        periodSeconds: 5
-      livenessProbe:
-        tcpSocket:
-          port: ui
-        initialDelaySeconds: 20
-        periodSeconds: 20
-      volumeMounts:
-      - name: config-volume
-        mountPath: ${CONF_DIR}
-      - name: data-volume
-        mountPath: ${DATA_DIR}
-      - name: log-volume
-        mountPath: ${LOG_DIR}
-    restartPolicy: Always
-    terminationGracePeriodSeconds: 30
-    volumes:
-    - name: config-volume
-      configMap:
-        name: ${NAME}-config
-    - name: data-volume
-      emptyDir: {}
-    - name: log-volume
-      emptyDir: {}
+    replicas: 1
+    triggers:
+    - type: "ConfigChange"
+    strategy:
+      type: "Rolling"
+    template:
+      metadata:
+        labels:
+          app: ${NAME}
+      spec:
+        containers:
+        - name: ${NAME}-ui
+          image: storm:${VERSION}
+          command:
+          - /bin/bash
+          - -c
+          args:
+          - storm --config ${CONF_DIR}/storm.yaml ui
+          imagePullPolicy: IfNotPresent
+          terminationMessagePath: /dev/termination-log
+          ports:
+          - containerPort: ${UI_PORT}
+            protocol: "TCP"
+            name: ui
+          readinessProbe:
+            tcpSocket:
+              port: ui
+            initialDelaySeconds: 20
+            periodSeconds: 5
+          livenessProbe:
+            tcpSocket:
+              port: ui
+            initialDelaySeconds: 20
+            periodSeconds: 20
+          volumeMounts:
+          - name: config-volume
+            mountPath: ${CONF_DIR}
+          - name: data-volume
+            mountPath: ${DATA_DIR}
+          - name: log-volume
+            mountPath: ${LOG_DIR}
+        restartPolicy: Always
+        terminationGracePeriodSeconds: 30
+        volumes:
+        - name: config-volume
+          configMap:
+            name: ${NAME}-config
+        - name: data-volume
+          emptyDir: {}
+        - name: log-volume
+          emptyDir: {}
