--- a/openshift/storm-monitor.yaml
+++ b/openshift/storm-monitor.yaml
@@ -35,9 +35,9 @@ parameters:
 - name: NIMBUS_SEEDS
   description: >
     "Nimbus seeds, FQDN values for all seeds in the cluster,
-     format must be: \"storm-nimbus-0.storm-nimbus\", \"storm-nimbus-1.storm-nimbus\" (Note quote marks)."
+     format must be: \"storm-nimbus-0.storm-nimbus.storm.svc.cluster.local\", \"storm-nimbus-1.storm-nimbus.storm.svc.cluster.local\" (Note quote marks)."
   required: true
-  value: "\"storm-nimbus-0.storm-nimbus.myproject.svc.cluster.local\", \"storm-nimbus-1.storm-nimbus.myproject.svc.cluster.local\""
+  value: "\"storm-nimbus-0.storm-nimbus.storm.svc.cluster.local\", \"storm-nimbus-1.storm-nimbus.storm.svc.cluster.local\""
 - name: CONFIG_FILE_CONTENS
   description: Add storm.yaml contents
   required: true
@@ -77,7 +77,7 @@ parameters:
   required: true
 - name: ROUTE_SERVICE_DOMAIN
   description: "Service domain for external routes. The route URL will be: NAME.ROUTE_SERVICE_DOMAIN"
-  value: "svc.myproject.com"
+  value: "svc.public.com"
   required: true
 
 objects:
